# python-rq-example

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/src/: api.py  connector.py  redis_connector.py  router.py
backend/src/helper/: utils.py
dashboard/: Dockerfile
worker/: Dockerfile  settings.py  supervisord.conf
