[tool.poetry]
name = "python-rq"
version = "0.0.1"
description = "Python RQ example"
authors = ["Roman Kryvokhyzha <kriwohizha@gmail.com>"]
keywords = ["python", "redis", "rq", "example", "redis queue"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"

redis = {version = "^5.0.1", optional = false}
rq = {version = "^1.15.1", optional = false}

fastapi = {version = "~0.104.0", optional = true}
pydantic = {version = "^2.4.2", optional = true}
uvicorn = {version = "^0.23.2", optional = true}
supervisor = {version = "^4.2.5", optional = true}
rq-dashboard = {version = "^0.6.7", optional = true}

[tool.poetry.extras]
all = [
    # basic deps
    "fastapi", "pydantic", "redis", "rq", "uvicorn", "supervisor"
]
backend = [
    "fastapi", "pydantic", "redis", "rq", "uvicorn",
]
worker = [
    "redis", "rq", "supervisor"
]
dashboard = [
    "redis", "rq", "rq-dashboard"
]

[tool.poetry.dev-dependencies]
pre-commit = "^3.4.0"

[tool.black]
line-length = 120
preview = true
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.hg
  | \.mypy_cache
  | \.vscode
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | configs
  | dist
)/
'''

[tool.ruff]
# all rules can be found here: https://beta.ruff.rs/docs/rules/
select = ["E", "F", "W", "I", "D"]

# max line length for black
line-length = 120

ignore=[
    # space before : (needed for how black formats slicing)
    "E203",
    # do not assign a lambda expression, use a def
    "E731",
    # do not use variables named 'l', 'O', or 'I'
    "E741",
    # unable to detect undefined names
    "F403",
    # imported but unused
    "F401",
    # missing docstring in public module
    "D100",
    # missing docstring in public class
    "D101",
    # missing docstring in public method
    "D102",
    # missing docstring in public function
    "D103",
    # missing docstring in public package
    "D104",
    # missing docstring in magic method
    "D105",
    # missing docstring in `__init__`
    "D107",
]

exclude=[
    ".git",
    "__pycache__",
    "dist",
    "configs",
    "build",
]

[tool.ruff.per-file-ignores]
# It's fine not to put the import at the top of the file in the examples
# folder.
"scripts/*"=["E402"]

[tool.ruff.isort]
# Use a single line after each import block.
lines-after-imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
ruff = "pyproject.toml"

[tool.nbqa.addopts]
ruff = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
ruff = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
